# StarTrackerGUI

./: CMakeLists.txt
inc/: astroUtils.h  common.h  firmwareUpdateWindow.h  mainWindow.h  platform.h  protocol.h  serial.h  settings.h  settingsWindow.h  tashimiTaki.h  utils.h
libs/serial/: CMakeLists.txt
src/: astroUtils.cpp  common.cpp  firmwareUpdateWindow.cpp  main.cpp  mainWindow.cpp  protocol.cpp  serial.cpp  settings.cpp  settingsWindow.cpp  tashimiTaki.cpp  testConversion.cpp  toshimiTaki.cpp  utils.cpp
